src/objects/brCategory_assignment__c.object
<CustomObject>
    <fields>
        <fullName>Blog_Article__c</fullName>
        <label>Blog Article</label>
        <referenceTo>brBlog_article__c</referenceTo>
        <relationshipLabel>Blog Categories</relationshipLabel>
        <relationshipName>Category_Assignment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Blog_Category__c</fullName>
        <label>Blog Category</label>
        <referenceTo>brBlog_Category__c</referenceTo>
        <relationshipLabel>Blog Articles</relationshipLabel>
        <relationshipName>Category_Assignment</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <formula>Blog_Article__r.Draft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <label>Blog Category Assignment</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Category Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blog Category Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>